# policy-reader

./: .env.example  .gitignore  PROJECT.md  README.md  app.py  pyproject.toml  requirements.txt  scraper.py  summarizer.py
.cache/summaries/: 08baaa112e6426ac.json
