[project]
name = "policy-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-genai>=1.73.1",
    "lxml>=6.1.0",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
]
